# k256-near-conflict

./: Cargo.toml  README.md  dev.env
res/: hello_world.wasm
scripts/: build.sh  deploy.sh  get_greeting.sh  random_acc.sh  set_greeting.sh
src/: lib.rs
